# mms

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PROGRESS.md  TODO.md
crates/mms-cli/: Cargo.toml
crates/mms-cli/src/: main.rs
crates/mms-cli/src/cli/: args.rs  course_resolver.rs  mod.rs  prompt_helpers.rs  semester_resolver.rs  setup.rs
crates/mms-cli/src/cli/commands/: config.rs  course.rs  mod.rs  schedule.rs  semester.rs  service.rs  status.rs  today.rs
crates/mms-core/: Cargo.toml
crates/mms-core/examples/: course_example.rs  degree_example.rs  grade_example.rs
crates/mms-core/migrations/: 001_initial_schema.sql  002_rename_active_course_to_active.sql  003_v1_schema_restructure.sql
crates/mms-core/src/: error.rs  lib.rs  paths.rs
crates/mms-core/src/config/: settings.rs
crates/mms-core/src/course/: builder.rs  mod.rs  operations.rs  types.rs
crates/mms-core/src/db/: connection.rs  connection_seaorm.rs  migrations.rs  mod.rs
crates/mms-core/src/db/entities/: active_course.rs  course_degree_mappings.rs  course_events.rs  course_possible_categories.rs  course_schedules.rs  courses.rs  degree_areas.rs  degrees.rs  exam_attempts.rs  exercises.rs  grade_components.rs  grades.rs  holiday_exceptions.rs  holidays.rs  lectures.rs  mod.rs  platform_accounts.rs  platform_course_links.rs  prelude.rs  semesters.rs  slides.rs  todos.rs
crates/mms-core/src/db/models/: active.rs  course.rs  exam.rs  holiday.rs  schedule.rs  semester.rs  todo.rs
crates/mms-core/src/db/queries/: active.rs  course.rs  course_categories.rs  degree_areas.rs  degrees.rs  event.rs  exam_attempts.rs  exercises.rs  grades.rs  holidays.rs  lectures.rs  mod.rs  platform.rs  schedule.rs  semester.rs  slides.rs  todos.rs
crates/mms-core/src/degree/: builder.rs  mod.rs  operations.rs  types.rs
crates/mms-core/src/grade/: builder.rs  calculation.rs  conversion.rs  mod.rs  operations.rs  rules.rs  types.rs
crates/mms-core/src/semester/: builder.rs  mod.rs  operations.rs
crates/mms-core/src/service/: daemon.rs  mod.rs  scheduler.rs
crates/mms-core/src/symlink/: mod.rs
crates/mms-core/src/sync/: mod.rs
crates/mms-core/src/toml/: course.rs  mod.rs  semester.rs
crates/mms-core/src/utils/: date_validation.rs  mod.rs
docs/: DATABASE_SCHEMA.md  OVERVIEW.md  WORKFLOW.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_initial_schema.rs
resources/: com.mms.daemon.plist
src/: error.rs  main.rs
src/cli/: course_resolver.rs  mod.rs  prompt_helpers.rs  semester_resolver.rs
src/cli/commands/: config.rs  course.rs  schedule.rs  semester.rs  service.rs  status.rs  today.rs
src/config/: settings.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/db/models/: active_course.rs  category.rs  course.rs  event.rs  lecture.rs  mod.rs  schedule.rs  semester.rs
src/db/queries/: active.rs  course.rs  event.rs  mod.rs  semester.rs
src/service/: mod.rs
src/symlink/: mod.rs
src/sync/: mod.rs
