[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

[dependencies.sea-orm]
version = "2.0.0-rc"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
