[package]
name = "mms"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mms"
path = "src/main.rs"

[dependencies]
mms-core = { path = "../mms-core" }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.4"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
thiserror = "2.0.17"
