[package]
name = "mms-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
ctrlc = "3.4"
dirs = "6.0.0"
git2 = "0.20.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.7"
