[package]
name = "mms-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
ctrlc = "3.4"
dirs = "6.0.0"
migration = { path = "../../migration" }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono" ] }
sea-orm-migration = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.13"
